# minervagis

./: .hgignore  BuildingMinerva.md  BuildingMinervaUbuntu.md  CMakeLists.txt  DataSources.md  ProjectHome.md  Todo.md
Source/: CMakeLists.txt
Source/Applications/MinervaQt/: CMakeLists.txt
Source/Applications/MinervaVR/: CMakeLists.txt  main.cpp  preferences.xml  registry.xml
Source/Database/SQLite/: Binder.cpp  Binder.h  CMakeLists.txt  Connection.cpp  Connection.h  Result.cpp  Result.h  SQLiteWrap_v9.vcproj
Source/GenericNurbs/: GenericNurbs.sln  Makefile
Source/GenericNurbs/Components/: CompileGuard.h  CurveDouble.cpp  CurveDouble.h  Export.def  Factory.cpp  Factory.h  Makefile  Operators.h  Precompiled.h  gn_components.vcproj
Source/GenericNurbs/Docs/: doxygen_config.txt
Source/GenericNurbs/Examples/: Makefile
Source/GenericNurbs/GN/: gn_library.vcproj
Source/Minerva/: CMakeLists.txt  Version.h
Source/Minerva/Common/: CMakeLists.txt  Coordinates.cpp  Coordinates.h  Export.h  Extents.h  IBuildScene.h  IDatabaseConnection.h  IElevationChangedListener.h  IElevationData.h  IElevationDatabase.h  IIntersectNotify.h  ILayerAddGUIQt.h  ILayerModifyGUIQt.h  IPlanetCoordinates.h  IReadFeature.h  IReadImageFile.h  IRefreshData.h  ITile.h  ITileVectorData.h  ITileVectorJob.h  ITimer.h  ITimerFactory.h  IWithinExtents.h  LayerKey.cpp  LayerKey.h  TileKey.cpp  TileKey.h
Source/Minerva/Core/: CMakeLists.txt  Declarations.h  DiskCache.cpp  DiskCache.h  ElevationData.cpp  ElevationData.h  Export.h  Macros.h  Navigator.cpp  Navigator.h  Visitor.cpp  Visitor.h
Source/Minerva/Document/: AnimationController.cpp  AnimationController.h  CMakeLists.txt  CameraPath.cpp  CameraPath.h  CameraPathController.cpp  CameraPathController.h  CurvePlayer.cpp  CurvePlayer.h  Export.h  MinervaDocument.cpp  MinervaDocument.h  OffScreenView.cpp  OffScreenView.h  PathBuilder.cpp  PathBuilder.h  SceneView.cpp  SceneView.h  View.cpp  View.h
Source/Minerva/Network/: CMakeLists.txt  Download.cpp  Download.h  Export.h  GeoCode.cpp  GeoCode.h  Http.cpp  Http.h  Names.h  WMS.cpp  WMS.h
Source/Minerva/OsgTools/: CMakeLists.txt  ConvertMatrixTransform.h  ConvertToTriangles.cpp  ConvertToTriangles.h  ConvertVector.h  Defaults.h  Export.h  FBOScreenCapture.cpp  FBOScreenCapture.h  Font.cpp  Font.h  FrameDump.cpp  FrameDump.h  Group.cpp  Group.h  Legend.cpp  Legend.h  LegendImage.cpp  LegendImage.h  LegendItem.cpp  LegendItem.h  LegendObject.cpp  LegendObject.h  LegendText.cpp  LegendText.h  OffScreenRenderer.cpp  OffScreenRenderer.h  OffScreenRendererPBuffer.cpp  OffScreenRendererPBuffer.h  Ray.cpp  Ray.h  ScopedProjection.h  ScopedViewport.h  ShapeFactory.cpp  ShapeFactory.h  SortBackToFront.cpp  SortBackToFront.h  StateSet.cpp  StateSet.h  TiledScreenCapture.cpp  (+4 more)
Source/Minerva/Plugins/: CMakeLists.txt
Source/Minerva/Qt/: CMakeLists.txt
Source/Serialize/XML/: CMakeLists.txt  DataMemberMap.cpp  DataMemberMap.h  Deserialize.h  Macros.h  Serialize.h  TypeWrapper.h
Source/Usul/: CMakeLists.txt
Source/Usul/Adaptors/: Random.h
Source/Usul/Algorithms/: Sphere.h  TriStrip.h
Source/Usul/App/: Application.cpp
Source/Usul/Base/: InstanceManager.cpp  InstanceManager.h  Object.cpp  Object.h  Referenced.cpp  Referenced.h
Source/Usul/Bits/: Bits.h
Source/Usul/Cast/: Cast.h
Source/Usul/CommandLine/: Arguments.cpp  Arguments.h
Source/Usul/Components/: Call.h  Create.h  Exceptions.h  Factory.h  Loader.h  Manager.cpp  Manager.h
Source/Usul/Containers/: Vector.h
Source/Usul/Convert/: WellKnownBinary.h
Source/Usul/DLL/: Exceptions.h  Library.cpp  Library.h  LibraryPool.cpp  Listener.cpp  Listener.h  Loader.cpp  Loader.h
Source/Usul/Diagnostics/: StackTrace.cpp  StackTraceLinux.h  StackTraceWindows.h  WriteLinux.h  WriteWindows.h
Source/Usul/Documents/: Document.cpp  Document.h  FileInfo.h
Source/Usul/Endian/: Endian.h
Source/Usul/Errors/: Assert.cpp  Assert.h  AssertPolicy.h  Checker.h  CompositePolicy.h  DoNothingPolicy.h  InvalidParameter.h  PrintingPolicy.h  Signals.h  ThrowingPolicy.h  UnhandledException.h
Source/Usul/Exceptions/: Canceled.h  Catch.h  Thrower.h
Source/Usul/Export/: Export.h
Source/Usul/File/: Log.cpp  Path.h  Temp.cpp  Temp.h
Source/Usul/Functions/: Color.h  GUID.cpp  SafeCall.h
Source/Usul/Headers/: OpenGL.h  SStream.h
Source/Usul/IO/: Redirect.h  StreamSink.h
Source/Usul/Interfaces/: IClassFactory.h  IPlugin.h  IProgressBar.h  IStatusBar.h  IUnknown.h
Source/Usul/Jobs/: Job.cpp  Job.h  Manager.cpp  Manager.h
Source/Usul/MPL/: SameType.h  StaticAssert.h  TypeWrap.h
Source/Usul/Math/: Absolute.h  Angle.h  Constants.h  Equality.h  ErrorPolicy.h  Finite.h  Matrix44.h  MinMax.h  NaN.h  Power.h  Quaternion.h  Transpose.h  Vector2.h  Vector3.h  Vector4.h
Source/Usul/Pointers/: DoNothingPolicy.h  Exceptions.h  Intrusive.h  NoReferencePolicy.h  NullPolicy.h  Pointers.h  QueryPointer.h  RefCountPolicy.h  SmartPointer.h
Source/Usul/Policies/: Update.h
Source/Usul/Predicates/: CloseFloat.h  EqualVector.h  LessVector.h  Tolerance.h  UnaryPair.h
Source/Usul/Preprocess/: UniqueName.h
Source/Usul/Print/: Matrix.h  Node.h  Vector.h
Source/Usul/Registry/: Constants.h  Database.cpp  Node.cpp  Node.h  Qt.h  Visitor.cpp  Visitor.h
Source/Usul/Scope/: Caller.h  RemoveFile.h  Reset.h  Timer.cpp  Timer.h
Source/Usul/Strings/: Case.h  Split.h
Source/Usul/System/: Clock.cpp  Clock.h  DateTime.cpp  DateTime.h  Directory.cpp  Environment.cpp  Environment.h  Host.cpp  Host.h  LastError.cpp  LastError.h  Memory.cpp  Memory.h
Source/Usul/Threads/: Guard.h  Map.h  Mutex.cpp  Mutex.h  MutexTraits.h  Named.cpp  Object.h  Pool.cpp  Pool.h  (+9 more)
Source/XmlTree/: CMakeLists.txt  Document.cpp  Document.h  Export.h  Functions.cpp  Functions.h  Loader.cpp  Loader.h  Node.cpp  Node.h  RegistryBuilder.cpp  RegistryBuilder.h  RegistryIO.cpp  RegistryVisitor.cpp  RegistryVisitor.h  ReplaceIllegalCharacters.h  Writer.cpp  Writer.h  XercesErrorHandler.h  XercesLife.cpp  XercesLife.h  XercesString.h
Tests/Unit/: CMakeLists.txt
Tools/MakeFrames/: CMakeLists.txt  Main.cpp
(+505 files in other folders)
